[tool.poetry]
name = "ttm"
version = "0.1.0"
description = ""
authors = ["mcutshaw <jack@jackofnotrades.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
PySide6 = "^6.3.1"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
bandit = "^1.7.4"
unittest = "^0.0"
black = {version = "^22.6.0", allow-prereleases = true}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
